--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,23 @@
+
+# Server
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
-ENCRYPTION_KEY=tobemodified
+
+# Secrets
+APP_KEYS=/GyRiTV6BMLwSKhkACdfuQ==,lWhCIJvTGoUSufxkAOC/KQ==,jQ6gFFXV7lqtAiogl8K5RQ==,u1tgosiSPPlKKWhZTZPlJA==
+API_TOKEN_SALT=shecknZZzzTgre6kWRX7eQ==
+ADMIN_JWT_SECRET=m403O1yzrFOZg2v+gIqKuA==
+TRANSFER_TOKEN_SALT=IgCA7RHqo/a7yEvTkAmW5Q==
+ENCRYPTION_KEY=uF5W+thfoFBlt38oXHHj2A==
+
+# Database
+DATABASE_CLIENT=postgres
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5432
+DATABASE_NAME=strapi
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_SSL=false
+DATABASE_FILENAME=
+JWT_SECRET=XkX1B1BBU5JrhdL5oIlSPg==
+JWT_SECRET=eFBhxVTZae287FfJhH28+g==
